@@ -7,7 +7,7 @@
 # Copyright (c) 2001 by Andreas Kupries <a.kupries@westend.com>
 # All rights reserved.
 #
-# RCS: @(#) $Id: csv.test,v 1.11 2004/01/15 06:36:12 andreas_kupries Exp $
+# RCS: @(#) $Id: csv.test,v 1.12 2005/04/14 06:07:20 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 # Initialise the test package
@@ -18,14 +18,34 @@ if {[lsearch [namespace children] ::tcltest] == -1} {
 }
 
 # -------------------------------------------------------------------------
-# Ensure we test _this_ local copy and one installed somewhere else.
+# Ensure we test _this_ local copy and not one installed somewhere else.
 #
 package forget csv
+package forget struct::queue
+package forget struct::matrix
+
 catch {namespace delete ::csv}
+catch {namespace delete ::struct::queue}
+catch {namespace delete ::struct::matrix}
+
 if {[catch {source [file join [file dirname [info script]] csv.tcl]} msg]} {
     puts "skipped [file tail [info script]]: $msg"
     return
 }
+
+if {[catch {source [file join [file dirname [file dirname [file normalize [info script]]]] struct queue.tcl]} msg]} {
+    puts "skipped [file tail [info script]] (struct/queue.tcl): $msg"
+    return
+}
+
+if {[catch {source [file join [file dirname [file dirname [file normalize [info script]]]] struct matrix.tcl]} msg]} {
+    puts "skipped [file tail [info script]] (struct/matrix.tcl): $msg"
+    return
+}
+
+package require struct::queue
+package require struct::matrix
+package require csv
 
 # -------------------------------------------------------------------------
 # Setup any constraints
@@ -35,9 +55,9 @@ if {[catch {source [file join [file dirname [info script]] csv.tcl]} msg]} {
 # Now the package specific tests....
 # -------------------------------------------------------------------------
 
-package require struct
-puts "- csv [package present csv]"
-puts "- struct [package present struct]"
+puts "- csv            [package present csv]"
+puts "- struct::queue  [package present struct::queue]"
+puts "- struct::matrix [package present struct::matrix]"
 
 set str1 {"123","""a""",,hello}
 set str2 {1," o, ""a"" ,b ", 3}
